--- a/main.css
+++ b/main.css
@@ -7,10 +7,18 @@ img {
     max-width: 100%;
 }
 
+blockquote {
+    border: 1px solid black;
+    padding: 10px 10px 10px 10px;
+}
+
 @media only screen and (max-width: 700px), print {
 body {
     width: 100%;
     padding: 10px;
+}
+blockquote {
+    margin-left: 0;
 }
 }
 
